Realizei o inicio de toda estrutura do site, criei a estrutura semantica, pode realizar qualquer alteração nos nomes

--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Principal</title>
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/estrutura.css">
 </head>
 <body>
-    
+    <main>
+        <nav class="menu">
+            <img src="./IMG/12-removebg-preview.png"alt="Logo Luciano Machado" class="logo-ml">
+            <a href="#" class="ancora">Galeria</a>
+            <a href="#" class="ancora">Playlist</a>
+            <a href="#" class="ancora">Agenda</a>
+            <a href="#" class="ancora">Área restrita</a>
+        </nav>
+        <section class="menu-principal">
+            <h1 class="title-menu-principal">Menu Principal</h1>
+            <h2 class="title-sobre">Sobre</h2>
+            <p class="sobre">AAAAAAAAAAAAAA</p>
+            <h2 class="avaliacao">Avaliaçõs de clientes</h2>
+            <p class="op-cliente">AAAAAAAAAAAAAAAAAAA</p>
+        </section>
+    </main>
+    <footer>
+        <div class="copyright">Design by Alan, Jefferson, Julia, Rodrigo e Ryan - 2024&copy;</div>
+    </footer>
 </body>
 </html>
