--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -1,30 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Principal</title>
     <link rel="stylesheet" href="./CSS/estrutura.css">
 </head>
+
 <body>
     <main>
         <nav class="menu">
-            <img src="./IMG/12-removebg-preview.png"alt="Logo Luciano Machado" class="logo-ml">
+            <img src="./IMG/12-removebg-preview.png" alt="Logo Luciano Machado" class="logo-ml">
             <a href="#" class="ancora">Galeria</a>
             <a href="#" class="ancora">Playlist</a>
             <a href="#" class="ancora">Agenda</a>
             <a href="#" class="ancora">Área restrita</a>
         </nav>
         <section class="menu-principal">
-            <h1 class="title-menu-principal">Menu Principal</h1>
-            <h2 class="title-sobre">Sobre</h2>
-            <p class="sobre">AAAAAAAAAAAAAA</p>
-            <h2 class="avaliacao">Avaliaçõs de clientes</h2>
-            <p class="op-cliente">AAAAAAAAAAAAAAAAAAA</p>
+            <div class="sobre-artista">
+                <h2 class="title-sobre">Sobre</h2>
+                <p class="sobre">Luciano Machado, é um cantor e instrumentista
+                    que realiza eventos em festas de casamentos.
+                </p>
+            </div>
+            <div class="op-clientes">
+                <h2 class="avaliacao">Avaliaçõs de clientes</h2>
+                <p class="cliente">AAAAAAAAAAAAAAAAAAA</p>
+            </div>
         </section>
     </main>
     <footer>
+        <div class="icones">
+            <a href="#"><img src="./IMG/instagram.png" alt="Contato Instagram" class="contatos"></a>
+            <a href="#"> <img src="./IMG/whatsapp.png" alt="Contato WhatsApp" class="contatos"></a>
+            <a href="#"> <img src="./IMG/gmail.png" alt="Contato Gmail" class="contatos"></a>
+        </div>
         <div class="copyright">Design by Alan, Jefferson, Julia, Rodrigo e Ryan - 2024&copy;</div>
     </footer>
 </body>
+
 </html>
