finalizando estrutura do site, ainda necessita de correção

--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Principal</title>
     <link rel="stylesheet" href="./CSS/estrutura.css">
+    <link rel="stylesheet" href="./CSS/menu-principal.css" class="rel">
 </head>
+
 <body>
-    <main>
-        
+    <header class="header">
         <nav class="menu">
             <img src="./IMG/12-removebg-preview.png" alt="Logo Luciano Machado" class="logo-ml">
             <div class="links">
@@ -19,6 +20,8 @@
                 <a href="#" class="ancora">Área restrita</a>
             </div>
         </nav>
+    </header>
+    <main>
         <section class="menu-principal">
             <div class="sobre-artista">
                 <h2 class="title-sobre">Sobre</h2>
