Fazendo a logo aparecer fora do menu hamburguer

--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -4,50 +4,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descrição do seu site aqui">
     <title>Menu Principal</title>
     <link rel="stylesheet" href="./CSS/estrutura.css">
-    <link rel="stylesheet" href="./CSS/menu-principal.css" class="rel">
-
+    <link rel="stylesheet" href="./CSS/menu-principal.css">
 </head>
 
 <body>
     <header class="header">
-            <div class="flex-mobile">
-                <div class="mobile-menu">
-                    <div class="line1"></div>
-                    <div class="line2"></div>
-                    <div class="line3"></div>
-                </div> <!-- mobile-menu -->
-            </div> <!-- flex-mobile -->
-
-            <div class="nav-bar">
-                <div class="mobile-menu-fechar">
-                    <div class="line1"></div>
-                    <div class="line2"></div>
-                </div> <!-- mobile-menu-fechar -->
-
-                <nav class="menu">
-                    <div class="logo">
-                        <img src="./IMG/12-removebg-preview.png" alt="Logo">
-                    </div>
-                    <ul>
-                        <li><a href="#" class="ancora">Galeria</a></li>
-                        <li><a href="#" class="ancora">Playlist</a></li>
-                        <li><a href="#" class="ancora">Agenda</a></li>
-                        <li><a href="#" class="ancora">Área restrita</a></li>
-                    </ul>
-                </nav>
+        <div class="flex-mobile">
+            <div class="mobile-menu">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div> <!-- mobile-menu -->
+            <div class="logo-container">
+                <div class="logo">
+                    <img src="./IMG/12-removebg-preview.png" alt="Logo">
+                </div>
+            </div>
+        </div> <!-- flex-mobile -->
+        <div class="nav-bar">
+            <div class="mobile-menu-fechar">
+                <div class="line1"></div>
+                <div class="line2"></div>
+            </div> <!-- mobile-menu-fechar -->
+            <nav class="menu">
+                <div class="logo">
+                    <img src="./IMG/12-removebg-preview.png" alt="Logo">
+                </div>
+                <ul>
+                    <li><a href="#" class="ancora">Galeria</a></li>
+                    <li><a href="#" class="ancora">Playlist</a></li>
+                    <li><a href="#" class="ancora">Agenda</a></li>
+                    <li><a href="#" class="ancora">Área restrita</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
+
     <main>
         <section class="menu-principal">
             <div class="sobre-artista">
                 <h2 class="title-sobre">Sobre</h2>
-                <p class="sobre">a
-                </p>
+                <p class="sobre">Conteúdo sobre o artista.</p>
             </div>
             <div class="op-clientes">
-                <h2 class="avaliacao">Avaliaçõs de clientes</h2>
-                <p class="cliente">A</p>
+                <h2 class="avaliacao">Avaliações de clientes</h2>
+                <p class="cliente">Comentários de clientes.</p>
             </div>
         </section>
     </main>
