--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -26,18 +26,20 @@
         </div> <!-- flex-mobile -->
         <div class="nav-bar">
             <div class="mobile-menu-fechar">
-                <div class="line1"></div>
-                <div class="line2"></div>
-            </div> <!-- mobile-menu-fechar -->
+                <div class="mobile-menu-fechar-x">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                </div> <!-- mobile-menu-fechar -->
+            </div>
             <nav class="menu">
                 <div class="logo">
                     <img src="./IMG/12-removebg-preview.png" alt="Logo">
                 </div>
                 <ul>
-                    <li><a href="#" class="ancora">Galeria</a></li>
-                    <li><a href="#" class="ancora">Playlist</a></li>
-                    <li><a href="#" class="ancora">Agenda</a></li>
-                    <li><a href="#" class="ancora">Área restrita</a></li>
+                    <li><a href="#" class="ancora"><p>Galeria</p></a></li>
+                    <li><a href="#" class="ancora"><p>Playlist</p></a></li>
+                    <li><a href="#" class="ancora"><p>Agenda</p></a></li>
+                    <li><a href="#"><button>Área Restrita</button></a></li>
                 </ul>
             </nav>
         </div>
@@ -61,7 +63,7 @@
             <a href="#"> <img src="./IMG/whatsapp.png" alt="Contato WhatsApp" class="contatos"></a>
             <a href="#"> <img src="./IMG/gmail.png" alt="Contato Gmail" class="contatos"></a>
         </div>
-        <div class="copyright">Design by Alan, Jefferson, Julia, Rodrigo e Ryan - 2024&copy;</div>
+        <div class="copyright-div">Design by Alan, Jefferson, Julia, Rodrigo e Ryan - 2024&copy;</div>
     </footer>
 
     <script src="./JS/script.js"></script>
