pequenas alterações de estruturação

--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+
     <header class="header">
         <div class="flex-mobile">
             <div class="mobile-menu">
@@ -20,7 +21,7 @@
             </div> <!-- mobile-menu -->
             <div class="logo-container">
                 <div class="logo">
-                    <img src="./IMG/12-removebg-preview.png" alt="Logo">
+                    <img src="./IMG/logos/logo-preta-png.png" alt="Logo">
                 </div>
             </div>
         </div> <!-- flex-mobile -->
@@ -33,7 +34,7 @@
             </div>
             <nav class="menu">
                 <div class="logo">
-                    <img src="./IMG/12-removebg-preview.png" alt="Logo">
+                    <img src="./IMG/logos/logo-preta-png.png" alt="Logo">
                 </div>
                 <ul>
                     <li><a href="#" class="ancora">
@@ -56,10 +57,20 @@
             <!-- sobre o músico -->
             <div class="sobre-artista">
                 <h2 class="title-sobre">Sobre</h2>
-                <p class="sobre">Conteúdo sobre o artista.</p>
+                <div class="sobre-div">
+                    <p class="sobre">Bem-vindo ao nosso espaço dedicado a celebrar momentos especiais! Com mais de 15
+                        anos
+                        de experiência na condução de cerimônias de casamentos e eventos, temos a honra de ser parte de
+                        histórias únicas em diferentes partes do mundo.br <br><br>
+
+                        Em nossa jornada, encontramos inspiração na arte de tornar sonhos realidade e criar memórias que
+                        resistem ao teste do tempo. Se você está prestes a dar o próximo passo no casamento ou
+                        planejando um
+                        evento significativo, estamos aqui para fazer parte desses momentos extraordinários.</p>
+                </div>
             </div>
             <div class="op-clientes">
-                <h2 class="avaliacao">Avaliações de clientes</h2>
+                <h2 class="avaliacao">Depoimentos</h2>
                 <!-- carrosel -->
                 <div class="carrosel-clientes">
                     <button class="control-btn" onclick="prevSlide()">&lt;</button>
@@ -75,7 +86,8 @@
                             <div class="carousel-item">
                                 <ul>
                                     <li class="nome-cli">Ágatha Correia Carvalho</li>
-                                    <li class="avaliacao-li">"Caros amigos, o julgamento imparcial das eventualidades faz
+                                    <li class="avaliacao-li">"Caros amigos, o julgamento imparcial das eventualidades
+                                        faz
                                         parte de um processo de gerenciamento das posturas dos órgãos dirigentes com
                                         relação às suas atribuições."
                                     </li>
@@ -100,12 +112,13 @@
         </section>
     </main>
 
-
     <footer>
         <div class="icones">
-            <a href="#"><img src="./IMG/instagram.png" alt="Contato Instagram" class="contatos"></a>
-            <a href="#"> <img src="./IMG/whatsapp.png" alt="Contato WhatsApp" class="contatos"></a>
-            <a href="#"> <img src="./IMG/gmail.png" alt="Contato Gmail" class="contatos"></a>
+            <a href="https://www.instagram.com/lumachadocasamentos/" target="_blank"><img src="./IMG/icones/instagram.png"
+                    alt="Contato Instagram" class="contatos"></a>
+            <a href="#"> <img src="./IMG/icones/whatsapp.png" alt="Contato WhatsApp" class="contatos"></a>
+            <a href="#"> <img src="./IMG/icones/gmail.png" alt="Contato Gmail" class="contatos"></a>
+            <a href="#"> <img src="./IMG/icones/youtube.png" alt="Contato YouTube" class="contatos"></a>
         </div>
         <div class="copyright-div">Design by Alan, Jefferson, Julia, Rodrigo e Ryan - 2024&copy;</div>
     </footer>
