--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -13,6 +13,7 @@
 <body>
 
     <header class="header">
+        
         <div class="flex-mobile">
             <div class="mobile-menu">
                 <div class="line1"></div>
@@ -25,6 +26,7 @@
                 </div>
             </div>
         </div> <!-- flex-mobile -->
+
         <div class="nav-bar">
             <div class="mobile-menu-fechar">
                 <div class="mobile-menu-fechar-x">
@@ -58,15 +60,10 @@
             <div class="sobre-artista">
                 <h2 class="title-sobre">Sobre</h2>
                 <div class="sobre-div">
-                    <p class="sobre">Bem-vindo ao nosso espaço dedicado a celebrar momentos especiais! Com mais de 15
-                        anos
-                        de experiência na condução de cerimônias de casamentos e eventos, temos a honra de ser parte de
-                        histórias únicas em diferentes partes do mundo.br <br><br>
-
-                        Em nossa jornada, encontramos inspiração na arte de tornar sonhos realidade e criar memórias que
-                        resistem ao teste do tempo. Se você está prestes a dar o próximo passo no casamento ou
-                        planejando um
-                        evento significativo, estamos aqui para fazer parte desses momentos extraordinários.</p>
+                    <p class="sobre">Bem-vindo ao nosso espaço dedicado a celebrar momentos especiais! Com mais de 15 anos de experiência na condução de cerimônias de casamentos e eventos, temos a honra de ser parte dehistórias únicas em diferentes partes do mundo.br 
+                        <br><br>
+                        Em nossa jornada, encontramos inspiração na arte de tornar sonhos realidade e criar memórias que resistem ao teste do tempo. Se você está prestes a dar o próximo passo no casamento ou planejando um evento significativo, estamos aqui para fazer parte desses momentos extraordinários.
+                    </p>
                 </div>
             </div>
             <div class="op-clientes">
