--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -12,8 +12,7 @@
 
 <body>
 
-    <header class="header">
-        
+    <header id="header">
         <div class="flex-mobile">
             <div class="mobile-menu">
                 <div class="line1"></div>
@@ -111,16 +110,17 @@
 
     <footer>
         <div class="icones">
-            <a href="https://www.instagram.com/lumachadocasamentos/" target="_blank"><img src="./IMG/icones/instagram.png"
+            <a href="https://www.instagram.com/lumachadocasamentos/" target="_blank"><img class="icones-img" src="./IMG/icones/instagram.png"
                     alt="Contato Instagram" class="contatos"></a>
-            <a href="#"> <img src="./IMG/icones/whatsapp.png" alt="Contato WhatsApp" class="contatos"></a>
-            <a href="#"> <img src="./IMG/icones/gmail.png" alt="Contato Gmail" class="contatos"></a>
-            <a href="#"> <img src="./IMG/icones/youtube.png" alt="Contato YouTube" class="contatos"></a>
+            <a href="#"> <img class="icones-img" src="./IMG/icones/whatsapp.png" alt="Contato WhatsApp" class="contatos"></a>
+            <a href="#"> <img class="icones-img" src="./IMG/icones/gmail.png" alt="Contato Gmail" class="contatos"></a>
+            <a href="#"> <img class="icones-img"src="./IMG/icones/youtube.png" alt="Contato YouTube" class="contatos"></a>
         </div>
         <div class="copyright-div">Design by Alan, Jefferson, Julia, Rodrigo e Ryan - 2024&copy;</div>
     </footer>
 
     <script src="./JS/script.js"></script>
+    <script src="./JS/scrollMenu.js"></script>
 </body>
 
 </html>
