--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -108,7 +108,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <div class="icones">
             <a href="https://www.instagram.com/lumachadocasamentos/" target="_blank"><img class="icones-img" src="./IMG/icones/instagram.png"
                     alt="Contato Instagram" class="contatos"></a>
