--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -38,13 +38,13 @@
                     <img src="./IMG/logos/logo-preta-png.png" alt="Logo">
                 </div>
                 <ul>
-                    <li><a href="#" class="ancora">
+                    <li><a href="./galeria.html" class="ancora">
                             <p>Galeria</p>
                         </a></li>
-                    <li><a href="#" class="ancora">
+                    <li><a href="./playlist.html" class="ancora">
                             <p>Playlist</p>
                         </a></li>
-                    <li><a href="#" class="ancora">
+                    <li><a href="./agenda.html" class="ancora">
                             <p>Agenda</p>
                         </a></li>
                     <li><a href="#"><button>Área Restrita</button></a></li>
