--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -35,7 +35,7 @@
             </div>
             <nav class="menu">
                 <div class="logo">
-                    <img src="./IMG/logos/logo-preta-png.png" alt="Logo">
+                    <a href="./index.html" class="inicio"><img src="./IMG/logos/logo-preta-png.png" alt="Logo"></a>
                 </div>
                 <ul>
                     <li><a href="./galeria.html" class="ancora">
@@ -59,9 +59,14 @@
             <div class="sobre-artista">
                 <h2 class="title-sobre">Sobre</h2>
                 <div class="sobre-div">
-                    <p class="sobre">Bem-vindo ao nosso espaço dedicado a celebrar momentos especiais! Com mais de 15 anos de experiência na condução de cerimônias de casamentos e eventos, temos a honra de ser parte dehistórias únicas em diferentes partes do mundo.br 
+                    <p class="sobre">Bem-vindo ao nosso espaço dedicado a celebrar momentos especiais! Com mais de 15
+                        anos de experiência na condução de cerimônias de casamentos e eventos, temos a honra de ser
+                        parte dehistórias únicas em diferentes partes do mundo.br
                         <br><br>
-                        Em nossa jornada, encontramos inspiração na arte de tornar sonhos realidade e criar memórias que resistem ao teste do tempo. Se você está prestes a dar o próximo passo no casamento ou planejando um evento significativo, estamos aqui para fazer parte desses momentos extraordinários.
+                        Em nossa jornada, encontramos inspiração na arte de tornar sonhos realidade e criar memórias que
+                        resistem ao teste do tempo. Se você está prestes a dar o próximo passo no casamento ou
+                        planejando um evento significativo, estamos aqui para fazer parte desses momentos
+                        extraordinários.
                     </p>
                 </div>
             </div>
@@ -110,11 +115,13 @@
 
     <footer class="footer">
         <div class="icones">
-            <a href="https://www.instagram.com/lumachadocasamentos/" target="_blank"><img class="icones-img" src="./IMG/icones/instagram.png"
-                    alt="Contato Instagram" class="contatos"></a>
-            <a href="#"> <img class="icones-img" src="./IMG/icones/whatsapp.png" alt="Contato WhatsApp" class="contatos"></a>
+            <a href="https://www.instagram.com/lumachadocasamentos/" target="_blank"><img class="icones-img"
+                    src="./IMG/icones/instagram.png" alt="Contato Instagram" class="contatos"></a>
+            <a href="#"> <img class="icones-img" src="./IMG/icones/whatsapp.png" alt="Contato WhatsApp"
+                    class="contatos"></a>
             <a href="#"> <img class="icones-img" src="./IMG/icones/gmail.png" alt="Contato Gmail" class="contatos"></a>
-            <a href="#"> <img class="icones-img"src="./IMG/icones/youtube.png" alt="Contato YouTube" class="contatos"></a>
+            <a href="#"> <img class="icones-img" src="./IMG/icones/youtube.png" alt="Contato YouTube"
+                    class="contatos"></a>
         </div>
         <div class="copyright-div">Design by Alan, Jefferson, Julia, Rodrigo e Ryan - 2024&copy;</div>
     </footer>
