criando-form-area-restrita

--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -38,16 +38,21 @@
                     <a href="./index.html" class="inicio"><img src="./IMG/logos/logo-preta-png.png" alt="Logo"></a>
                 </div>
                 <ul>
-                    <li><a href="./galeria.html" class="ancora">
+                    <li><a href="#" class="ancora">
                             <p>Galeria</p>
                         </a></li>
-                    <li><a href="./playlist.html" class="ancora">
+                    <li><a href="#" class="ancora">
                             <p>Playlist</p>
                         </a></li>
-                    <li><a href="./agenda.html" class="ancora">
+                    <li><a href="#" class="ancora">
                             <p>Agenda</p>
                         </a></li>
-                    <li><a href="#"><button>Área Restrita</button></a></li>
+                    <li><button class="area-restrita">Área Restrita</button></li>
+                    <form class="restrita">
+                        <input type="text" placeholder="Login">
+                        <input type="password" placeholder="Senha">
+                        <input class="entrar" type="submit" value="Entrar">
+                    </form>
                 </ul>
             </nav>
         </div>
