--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -72,6 +72,7 @@
                         resistem ao teste do tempo. Se você está prestes a dar o próximo passo no casamento ou
                         planejando um evento significativo, estamos aqui para fazer parte desses momentos
                         extraordinários.
+                        
                     </p>
                 </div>
             </div>
@@ -119,14 +120,13 @@
     </main>
 
     <footer class="footer">
+        <p>Entre em contato para realizar seu orçamento</p>
         <div class="icones">
             <a href="https://www.instagram.com/lumachadocasamentos/" target="_blank"><img class="icones-img"
                     src="./IMG/icones/instagram.png" alt="Contato Instagram" class="contatos"></a>
             <a href="#"> <img class="icones-img" src="./IMG/icones/whatsapp.png" alt="Contato WhatsApp"
                     class="contatos"></a>
             <a href="#"> <img class="icones-img" src="./IMG/icones/gmail.png" alt="Contato Gmail" class="contatos"></a>
-            <a href="#"> <img class="icones-img" src="./IMG/icones/youtube.png" alt="Contato YouTube"
-                    class="contatos"></a>
         </div>
         <div class="copyright-div">Design by Alan, Jefferson, Julia, Rodrigo e Ryan - 2024&copy;</div>
     </footer>
