--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
     <header id="header">
         <div class="flex-mobile">
             <div class="mobile-menu">
@@ -44,7 +43,7 @@
                     <li><a href="#" class="ancora">
                             <p>Playlist</p>
                         </a></li>
-                    <li><a href="#" class="ancora">
+                    <li><a href="./agenda.html" class="ancora">
                             <p>Agenda</p>
                         </a></li>
                     <li><button class="area-restrita">Área Restrita</button></li>
@@ -72,7 +71,7 @@
                         resistem ao teste do tempo. Se você está prestes a dar o próximo passo no casamento ou
                         planejando um evento significativo, estamos aqui para fazer parte desses momentos
                         extraordinários.
-                        
+
                     </p>
                 </div>
             </div>
@@ -112,9 +111,6 @@
                     </div>
                     <button class="control-btn" onclick="nextSlide()">&gt;</button>
                 </div>
-            </div>
-            </div>
-            </div>
             </div>
         </section>
     </main>
