--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -127,8 +127,9 @@
         <div class="copyright-div">Design by Alan, Jefferson, Julia, Rodrigo e Ryan - 2024&copy;</div>
     </footer>
 
-    <script src="./JS/script.js"></script>
-    <script src="./JS/scrollMenu.js"></script>
+    <script src="./JS/navBar.js"></script>
+    <script src="./JS/carrossel.js"></script>
+    <script src="./JS/areaRestrita.js"></script>
 </body>
 
 </html>
