--- a/Menu Principal/agenda.html
+++ b/Menu Principal/agenda.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda</title>
     <link rel="stylesheet" href="./CSS/estrutura.css">
+    <link rel="stylesheet" href="./CSS/agenda.css">
 </head>
 <body>
     <header id="header">
@@ -55,7 +56,13 @@
 
     <main>
         <section class="agenda">
-            
+            <div class="titulo-menu">
+                <h1>Agenda</h1>
+                <h2>Próximos Shows</h2>
+            </div>
+            <div class="estrutura-show">
+                <input type="text">
+            </div>
         </section>
     </main>
 
