--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -48,8 +48,8 @@
                         </a></li>
                     <li><button class="area-restrita">Área Restrita</button></li>
                     <form class="restrita">
-                        <input type="text" placeholder="Login">
-                        <input type="password" placeholder="Senha">
+                        <input class="restrita-input" type="text" placeholder="Login">
+                        <input class="restrita-input" type="password" placeholder="Senha">
                         <input class="entrar" type="submit" value="Entrar">
                     </form>
                 </ul>
