--- a/Menu Principal/admin.html
+++ b/Menu Principal/admin.html
@@ -5,10 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administração</title>
+    <link rel="stylesheet" href="./CSS/admin.css">
 </head>
-
 <body>
+    <form action="">
+        <label for="">Data:
+            <input type="date" name="data">
+        </label>
+        <label for="">Local :
+            <input type="text" name="local">
+        </label>
+        <label for="">Cidade:
+            <input type="text" name="cidade">
+        </label>
+    </form>
 
+    <script src="./JS/admin.js"></script>
 </body>
 
 </html>
