--- a/Menu Principal/galeria.html
+++ b/Menu Principal/galeria.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria</title>
     <link rel="stylesheet" href="./CSS/estrutura.css">
+    <link rel="stylesheet" href="./CSS/galeria.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
     <header id="header">
         <div class="flex-mobile">
@@ -54,7 +59,12 @@
     </header>
 
     <main>
-        <section class="agenda">
+        <section class="galeria">
+            <!-- <div class="galeria-carrossel">
+
+            </div>
+            <div class="galeria-carrossel"></div> -->
+            
             
         </section>
     </main>
@@ -73,6 +83,10 @@
 
     <script src="./JS/script.js"></script>
     <script src="./JS/scrollMenu.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
