começando-tela-de-admin

--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
     <header id="header">
         <div class="flex-mobile">
             <div class="mobile-menu">
@@ -38,13 +37,13 @@
                     <a href="./index.html" class="inicio"><img src="./IMG/logos/logo-preta-png.png" alt="Logo"></a>
                 </div>
                 <ul>
-                    <li><a href="#" class="ancora">
+                    <li><a href="./galeria.html" class="ancora">
                             <p>Galeria</p>
                         </a></li>
-                    <li><a href="#" class="ancora">
+                    <li><a href="./playlist.html" class="ancora">
                             <p>Playlist</p>
                         </a></li>
-                    <li><a href="#" class="ancora">
+                    <li><a href="./agenda.html" class="ancora">
                             <p>Agenda</p>
                         </a></li>
                     <li><button class="area-restrita">Área Restrita</button></li>
@@ -72,7 +71,7 @@
                         resistem ao teste do tempo. Se você está prestes a dar o próximo passo no casamento ou
                         planejando um evento significativo, estamos aqui para fazer parte desses momentos
                         extraordinários.
-                        
+
                     </p>
                 </div>
             </div>
@@ -113,9 +112,6 @@
                     <button class="control-btn" onclick="nextSlide()">&gt;</button>
                 </div>
             </div>
-            </div>
-            </div>
-            </div>
         </section>
     </main>
 
@@ -131,8 +127,9 @@
         <div class="copyright-div">Design by Alan, Jefferson, Julia, Rodrigo e Ryan - 2024&copy;</div>
     </footer>
 
-    <script src="./JS/script.js"></script>
-    <script src="./JS/scrollMenu.js"></script>
+    <script src="./JS/navBar.js"></script>
+    <script src="./JS/carrossel.js"></script>
+    <script src="./JS/areaRestrita.js"></script>
 </body>
 
 </html>
