--- a/Menu Principal/admin.html
+++ b/Menu Principal/admin.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administração</title>
     <link rel="stylesheet" href="./CSS/admin.css">
 </head>
-
-
 <body>
 
     <div class="container">
@@ -29,9 +26,9 @@
                 </label>
                 <div class="botoes">
                     <button type="submit">Adicionar Show</button>
-                    <button type="submit">Sair</button>
                 </div>
             </form>
+            <button class="sair" type="submit">Sair</button>
         </div>
     </div>
 
@@ -45,8 +42,8 @@
         <button class="editar">Editar</button>
     </div>
 
-    <body>
         <script src="./JS/admin.js"></script>
+
     </body>
 
 </html>
