--- a/Menu Principal/admin.html
+++ b/Menu Principal/admin.html
@@ -14,7 +14,7 @@
         <div>
             <form class="add_show">
                 <label>Data:
-                    <input class="date" type="date" required>
+                    <input class="calendario" type="date" required>
                 </label>
 
                 <label>Local e horário:
