--- a/Menu Principal/admin.html
+++ b/Menu Principal/admin.html
@@ -13,17 +13,12 @@
         <h2>Adicionar Novo Show</h2>
         <div>
             <form class="add_show">
-                <label>Data:
+                <label>Data</label>
                     <input class="calendario" type="date" required>
-                </label>
-
-                <label>Local e horário:
+                <label>Local e horário</label>
                     <input class="local" type="text" required>
-                </label>
-
-                <label>Cidade:
+                <label>Cidade</label>
                     <input class="cidade" type="text" required>
-                </label>
                 <div class="botoes">
                     <button type="submit">Adicionar Show</button>
                 </div>
