carrosel quase pronto

--- a/MenuPrincipal/public/galeria.html
+++ b/MenuPrincipal/public/galeria.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/estrutura.css">
     <link rel="stylesheet" href="./CSS/galeria.css">
 </head>
@@ -58,35 +57,29 @@
     </header>
 
     <main>
-        <section>
-            <h1>Galeria</h1>
-            <div id="carouselExampleIndicators" class="carousel slide">
-                <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+         <section>
+    <div class="carousel-container">
+                <h1>Galeria</h1>
+                <div class="carousel carousel-1">
+                    <button class="prev" onclick="prevSlide('carousel-1')">&#10094; </button>
+                    <button class="next" onclick="nextSlide('carousel-1')"> &#10095;</button>
+                    <ul>
+                        <li><img src="./IMG/carrossel/img1.png" alt="Imagem 1"></li>
+                        <li><img src="./IMG/carrossel/img2.png" alt="Imagem 2"></li>
+                        <li><img src="./IMG/carrossel/img3.png" alt="Imagem 3"></li>
+                    </ul>
                 </div>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img style="width: 50vw; height: 42vh;" src="./IMG/carrossel/img1.png" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img style="width: 50vw; height: 42vh;" src="./IMG/carrossel/img2.png" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img style="width: 50vw; height: 42vh;" src="./IMG/carrossel/img3.png" class="d-block w-100" alt="...">
-                  </div>
+            
+                <div class="carousel carousel-2">
+                    <button class="prev" onclick="prevSlide('carousel-2')">&#10094;</button>
+                    <button class="next" onclick="nextSlide('carousel-2')">&#10095;</button>
+                    <ul>
+                        <li><img src="./IMG/carrossel/img1.png" alt="Imagem 1"></li>
+                        <li><img src="./IMG/carrossel/img2.png" alt="Imagem 2"></li>
+                        <li><img src="./IMG/carrossel/img3.png" alt="Imagem 3"></li>
+                    </ul>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-           
+            </div>
         </section>
     </main>
 
@@ -102,12 +95,18 @@
         <div class="copyright-div">Design by Alan, Jefferson, Julia, Rodrigo e Ryan - 2024&copy;</div>
     </footer>
 
+
+    <script>
+        // Iniciar o carrossel automaticamente a cada 3 segundos
+        startCarousel('carousel-1', 3000);
+    </script>
+
     <script src="./JS/script.js"></script>
     <script src="./JS/scrollMenu.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./JS/navBar.js"></script>
     <script src="./JS/carrossel.js"></script>
     <script src="./JS/areaRestrita.js"></script>
+    <script src="./JS/carrossel-galeria.js"></script>
 </body>
 
 </html>
